# sip

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  OAT.xml  OWNERS  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  install_deps.sh  requirements.txt  version.info
core/: CMakeLists.txt
core/base/: CMakeLists.txt  as_strided.cpp  complex_mul.cpp  concat.cpp  conj.cpp  div.cpp  mat_mul.cpp  mul.cpp  muls.cpp  reverse.cpp  slice.cpp  stack.cpp  swaplast2axes.cpp  unfold_grad.cpp
core/blas/: CMakeLists.txt  asum.cpp  blas_api.cpp  cal.cpp  caxpy.cpp  cgemm.cpp  cgemv.cpp  cgemv_batched.cpp  cgerc.cpp  cmatinv_batched.cpp  colwise_mul.cpp  complex_mat_dot.cpp  copy.cpp  ctrmv.cpp  dot.cpp  gemm_batched.cpp  iamax.cpp  interpolation.cpp  nrm2.cpp  rot.cpp  ssyr.cpp  ssyr2.cpp  strmm.cpp  strmv.cpp  swap.cpp
core/blas/blasplan/: BlasAsumPlan.cpp  BlasCalPlan.cpp  BlasCaxpyPlan.cpp  BlasCgemmPlan.cpp  BlasCgemvBatchedPlan.cpp  BlasCgemvPlan.cpp  BlasCgercPlan.cpp  BlasCgetriBatchedPlan.cpp  BlasCmatinvBatchedPlan.cpp  BlasColwiseMulPlan.cpp  BlasComplexMatDotPlan.cpp  BlasCopyPlan.cpp  BlasCtrmvPlan.cpp  BlasDotPlan.cpp  BlasGemmBatchedPlan.cpp  BlasIamaxPlan.cpp  BlasPlan.cpp  BlasPlanCache.cpp  BlasStrmmPlan.cpp  BlasStrmvPlan.cpp  BlasSwapPlan.cpp  CMakeLists.txt
core/fft/: CMakeLists.txt  fft_api.cpp  istft.cpp
core/fft/fftcore/: CMakeLists.txt  dd_core.cpp  ddd_core_sep.cpp  dft_c2r_core.cpp  dft_core.cpp  dft_core_sep.cpp  dft_r2c_core.cpp  fft_c2c2d_arch35.cpp  fft_c2c_arch35.cpp  fft_c2r_arch35.cpp  fft_c2r_core.cpp  fft_core_any.cpp  fft_core_b.cpp  fft_core_b_sep.cpp  fft_core_common_func.cpp  fft_core_common_func_utils.cpp  fft_core_istft_any.cpp  fft_core_mix.cpp  fft_core_mix_base.cpp  fft_core_n.cpp  fft_core_stride.cpp  fft_r2c_arch35.cpp  fft_r2c_core.cpp  select_core.cpp
core/fft/fftplan/: CMakeLists.txt  fft_plan.cpp  fft_plan_cache.cpp
core/fft/utils/: CMakeLists.txt  fft_mode.cpp  fftensor_cache.cpp  rotate.cpp  workspace.cpp
core/filter/: CMakeLists.txt  convolve.cpp
core/include/: base_inner_api.h
core/interpolation/: CMakeLists.txt  asdInterpWithCoeff.cpp
core/utils/: CMakeLists.txt  common_check.cpp  log_core.cpp  log_entity.cpp  log_sink_file.cpp  log_sink_stdout.cpp  log_stream.cpp  ops_base.cpp  sip_lock.cpp  the_tensor.cpp  the_view.cpp
example/: CMakeLists.txt  README.md  build.sh  example.cpp
example/A2/BASE/: example_mul_complex32.cpp  example_mul_complex64.cpp  example_swap_last2_axes.cpp
example/A2/BLAS/: example_caxpy.cpp  example_ccopy.cpp  example_cdotc.cpp  example_cdotu.cpp  example_cgemm.cpp  example_cgemm_batched.cpp  example_cgemv.cpp  example_cgemv_batched.cpp  example_cgerc.cpp  example_colwise_mul.cpp  example_complex_mat_dot.cpp  example_cscal.cpp  example_csrot.cpp  example_csscal.cpp  example_cswap.cpp  example_ctrmv.cpp  example_hcgemm_batched.cpp  example_hcgemv_batched.cpp  example_icamax.cpp  example_isamax.cpp  example_sasum.cpp  example_scasum.cpp  example_scnrm2.cpp  example_scopy.cpp  example_sdot.cpp  example_snrm2.cpp  example_sscal.cpp  example_sswap.cpp  example_ssyr.cpp  example_ssyr2.cpp  example_strmm.cpp  example_strmv.cpp
example/A2/Domain/: example_rsInterpolationBySinc.cpp
example/A2/FFT/: example_acl_fft_c2c_1d.cpp  example_acl_fft_c2c_2d.cpp  example_acl_fft_c2r_1d.cpp  example_acl_fft_c2r_2d.cpp  example_acl_fft_r2c_1d.cpp  example_acl_fft_r2c_2d.cpp
example/A2/Filter/: example_asd_convolve_complex32.cpp  example_asd_convolve_complex64.cpp
example/A2/Intepolation/: example_asd_interp_with_coeff.cpp
imported_libs/: CMakeLists.txt
ops/: CMakeLists.txt  ops.cpp
ops/base/: CMakeLists.txt
ops/base/conj/: CMakeLists.txt  conj_operation.cpp
ops/base/mul/: CMakeLists.txt  mul_operation.cpp
ops/base/swaplast2axes/: CMakeLists.txt  swap_last_2axes_kernel.cpp  swap_last_2axes_operation.cpp
ops/blas/: CMakeLists.txt
ops/blas/ascblas/: ascblas_fp32_utils.h  ascblas_kernel_utils.h  ascblas_type.h
ops/blas/asum/: CMakeLists.txt  asum_kernel.cpp  asum_operation.cpp
ops/blas/cal/: CMakeLists.txt  cal_operation.cpp
ops/blas/caxpy/: CMakeLists.txt  caxpy_operation.cpp
ops/blas/cgemm/: CMakeLists.txt  cgemm_operation.cpp
ops/blas/cgemm_batched/: CMakeLists.txt  cgemm_batched_operation.cpp
ops/blas/cgemv/: CMakeLists.txt  cgemv_operation.cpp
ops/blas/cgemv_batched/: CMakeLists.txt  cgemv_batched_operation.cpp
ops/blas/cgerc/: CMakeLists.txt  cgerc_operation.cpp
ops/blas/cgetri_batched/: CMakeLists.txt  cgetri_batched_operation.cpp
ops/blas/cmatinv_batched/: CMakeLists.txt  cmatinv_batched_operation.cpp
ops/blas/colwise_mul/: CMakeLists.txt  colwise_mul_operation.cpp
ops/blas/common_tiling/: CMakeLists.txt  common_tiling.cpp
ops/blas/complex_mat_dot/: CMakeLists.txt  complex_mat_dot_operation.cpp
ops/blas/copy/: CMakeLists.txt  copy_operation.cpp
ops/blas/ctrmv/: CMakeLists.txt  ctrmv_operation.cpp
ops/blas/dot/: CMakeLists.txt  dot_operation.cpp
ops/blas/hcgemm_batched/: CMakeLists.txt  hcgemm_batched_operation.cpp
ops/blas/iamax/: CMakeLists.txt  iamax_operation.cpp
ops/blas/interpbycoeff/: CMakeLists.txt  interbycoeff_operation.cpp
ops/blas/interpolation/: CMakeLists.txt  interpolation_operation.cpp
ops/blas/nrm2/: CMakeLists.txt  nrm2_operation.cpp
ops/blas/rot/: CMakeLists.txt  rot_operation.cpp
ops/blas/ssyr/: CMakeLists.txt  ssyr_operation.cpp
ops/blas/ssyr2/: CMakeLists.txt  ssyr2_operation.cpp
ops/blas/strmm/: CMakeLists.txt  strmm_operation.cpp
ops/blas/strmv/: CMakeLists.txt  strmv_operation.cpp
ops/blas/swap/: CMakeLists.txt  swap_operation.cpp
ops/fft/: CMakeLists.txt
ops/filter/: CMakeLists.txt
ops/filter/convolve/: CMakeLists.txt  convolve_kernel.cpp  convolve_operation.cpp
ops/include/: ops.h
ops/include/common/: common.h  common_func.h  layout.h  (+7 more)
ops/utils/: CMakeLists.txt  common.cpp
tests/: CMakeLists.txt
tests/st/: CMakeLists.txt  README.md  asdsip_api_binder.cpp  sinc_interp.h
tests/ut/: CMakeLists.txt  README.md
(+890 files in other folders)
